Container/Kubernetes/k3s-soniiit/Longhorn/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.home.soniiit.net`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: home-soniiit-net-selfsigned-tls
